- Further README adjustments  - On the project setup page, replace the links to how to get an API key  with a link to the appropriate section in the readme

--- a/youtubewatched/templates/help/setup_project_help.html
+++ b/youtubewatched/templates/help/setup_project_help.html
@@ -7,9 +7,9 @@
     <div class="help-item">
         <h3>Google API key</h3>
         <p>
-            For making requests to Youtube Data API for information on each video
-            (<a href="https://developers.google.com/youtube/v3/getting-started" target="_blank">how</a> to get
-            <a href="https://support.google.com/googleapi/answer/6158862?hl=en" target="_blank">one</a>).
+            For making requests to Youtube Data API for information on each video.
+            Refer to the <a href="https://github.com/VldmrB/youtube-watched/#what-youll-need"
+                target="_blank">readme</a> on how to get one.
         </p>
     </div>
 </div>
