--- a/youtubewatched/templates/help/takeout_help.html
+++ b/youtubewatched/templates/help/takeout_help.html
@@ -5,7 +5,7 @@ SQLite browser, such as <a href="https://sqlitebrowser.org/">DB Browser for SQLi
 the data like a spreadsheet, as well as making simple graphs.  </p>
 <p>Outside of requests to YouTube Data API, the whole thing is run locally.</p>
 <p>This is <em>not</em> a tool for exhaustive data gathering/archiving and records keeping. Even if it tried to be, inaccuracies
-in Takeout would not allow for that (read below to see why).</p>
+in Takeout would not allow for <a href="#takeout-quirks-and-data-accuracy">that</a>.</p>
 <h2 id="notes-on-how-the-app-works">Notes on how the app works</h2>
 <h3 id="data-retrieval-and-insertion-process">Data retrieval and insertion process</h3>
 <p>Takeout&#39;s watch-history.html file(s) gets parsed for the available info. Some records will only contain a timestamp of
