--- a/youtubewatched/templates/help/setup_project_help.html
+++ b/youtubewatched/templates/help/setup_project_help.html
@@ -8,8 +8,8 @@
         <h3>Google API key</h3>
         <p>
             For making requests to Youtube Data API for information on each video.
-            Refer to the <a href="https://github.com/VldmrB/youtube-watched/#what-youll-need"
-                target="_blank">readme</a> on how to get one.
+            Refer to the <a href="https://github.com/VldmrB/youtube-watched/#what-youll-need" target="_blank">readme</a>
+            on how to get one.
         </p>
     </div>
 </div>
