--- a/youtubewatched/templates/help/takeout_help.html
+++ b/youtubewatched/templates/help/takeout_help.html
@@ -1,6 +1,6 @@
 <h2 id="the-goal-of-the-app">The goal of the app</h2>
-<p>is to gather some data about your YouTube watch history (available via Google Takeout) and do some light visualization
-of it. There&#39;s a few interactive graphs and tables on the Visualize page, and then there&#39;s the data itself. An
+<p>is to gather some data about your YouTube watch history (available via Google Takeout) and do some light visualization of it.
+There's a few built-in interactive graphs and tables, delivered via a web page, and then there's the data itself that can be used for more. An
 SQLite browser, such as <a href="https://sqlitebrowser.org/" target="_blank">DB Browser for SQLite</a>, could be used for viewing and filtering
 the data like a spreadsheet, as well as making simple graphs.  </p>
 <p>Outside of requests to YouTube Data API, the whole thing is run locally.</p>
