In HTML templates, move current/project directory div into the base.html  one and make it open (at least try to) the project directory when  clicked on

--- a/youtubewatched/templates/base.html
+++ b/youtubewatched/templates/base.html
@@ -9,6 +9,14 @@
         <title>{% block title %}YT Data Analysis{% endblock %}</title>
     </head>
     <body>
-            {% block body %}{% endblock %}
+    {% if path %}
+        <div class="project-dir-path">
+            Current project: <a href="#" id="project-path" class="project-path">{{ path }}</a>
+        </div>
+    {% endif %}
+    {% block body %}{% endblock %}
+    <script>
+        document.querySelector("#project-path").addEventListener("click", openProjectDirectory);
+    </script>
     </body>
 </html>
