--- a/youtubewatched/templates/help/takeout_help.html
+++ b/youtubewatched/templates/help/takeout_help.html
@@ -19,7 +19,7 @@ project directory under the default name of yt.sqlite. Those without any identif
 The Quotas tab on Google&#39;s <a href="https://console.developers.google.com/apis/api/youtube.googleapis.com/overview" target="_blank">Console</a>
 page will show how many have been used up.</p>
 <p>Should the process get interrupted for any reason, it&#39;s safe to restart it using the same Takeout files; no duplicates
-will be created and no duplicate queries will be made (except 1 every time).</p>
+will be created and no duplicate queries will be made (except one for updating the 'categories' table every time).</p>
 <h3 id="takeout-quirks-and-data-accuracy">Takeout quirks and data accuracy</h3>
 <p>Takeout works strangely. Only the last few years of watch history seem to ever get returned.<br>In addition to that, varying numbers of entries get returned each time an archive is created, with more
 recent versions sometimes including older entries than the previous versions, as well as more entries throughout the
